# pendulum

./: .gitmodules  CMakeLists.txt  readme.md
lcmtypes/: CMakeLists.txt
src/: CMakeLists.txt
src/common/: actuators_interface.cc  actuators_interface.h  force_disturber.cc  lcm_publish.cc  lcm_publish.h  utils.cpp  utils.h
src/pendulum/: CMakeLists.txt  hardware_plant.cc  hardware_plant.h  lqr_control.cc  lqr_control.h  lqrfeedforward.cc  lqrfeedforward.h  make_pendulum_plant.cc  make_pendulum_plant.h  simulate.cc  simulate.h
